@@ -5,9 +5,16 @@ AM_CPPFLAGS += -I$(top_srcdir)/include -I$(prefix)/include $(BOOST_CPPFLAGS)
 AM_LDFLAGS += -L$(top_builddir)/src -L$(prefix)/lib $(BOOST_LDFLAGS) -avoid-version
 
 libLHAPDFInfo_la_SOURCES = Info.cc
-libLHAPDFInfo_la_CPPFLAGS = $(AM_CPPFLAGS) $(YAMLCPP_CPPFLAGS) -DYAMLCPP_API=$(YAMLCPP_MAJOR_VERSION)
-libLHAPDFInfo_la_LDFLAGS = $(AM_LDFLAGS) -L$(top_builddir)/src -L$(prefix)/lib $(BOOST_LDFLAGS) $(YAMLCPP_LDFLAGS) -avoid-version
-libLHAPDFInfo_la_LIBADD =  $(YAMLCPP_LIBS)
+if USE_BUILTIN_YAMLCPP
+all-local:
+	cd yaml-cpp && cmake . && $(MAKE)
+  libLHAPDFInfo_la_CPPFLAGS = -I$(srcdir)/yaml-cpp/include -DYAMLCPP_API=3 $(AM_CPPFLAGS)
+  libLHAPDFInfo_la_LDFLAGS = $(AM_LDFLAGS) -Wl,-whole-archive -L$(srcdir)/yaml-cpp -lyaml-cpp -Wl,-no-whole-archive
+else
+  libLHAPDFInfo_la_CPPFLAGS = $(AM_CPPFLAGS) $(YAMLCPP_CPPFLAGS) -DYAMLCPP_API=$(YAMLCPP_MAJOR_VERSION)
+  libLHAPDFInfo_la_LDFLAGS = $(AM_LDFLAGS) $(YAMLCPP_LDFLAGS)
+  libLHAPDFInfo_la_LIBADD = $(YAMLCPP_LIBS)
+endif
 
 libLHAPDFPaths_la_SOURCES = Paths.cc
 libLHAPDFPaths_la_CPPFLAGS = $(AM_CPPFLAGS) -DLHAPDF_INSTALL_PREFIX=\"$(prefix)\" -DLHAPDF_DATA_PREFIX=\"$(datadir)\"
@@ -23,7 +30,7 @@ libLHAPDF_la_SOURCES = \
   AlphaS.cc AlphaS_Analytic.cc AlphaS_ODE.cc AlphaS_Ipol.cc \
   Factories.cc
 
-libLHAPDF_la_LIBADD = $(BOOST_LIBS) libLHAPDFInfo.la
+libLHAPDF_la_LIBADD = $(BOOST_LIBS) libLHAPDFInfo.la libLHAPDFPaths.la
 if ENABLE_LHAGLUE
   libLHAPDF_la_LIBADD += libLHAPDFGlue.la
 endif
